--- a/app/public/style/scss/style.scss
+++ b/app/public/style/scss/style.scss
@@ -1,5 +1,10 @@
 html, body{
-    margin: 0;
-    padding: 0;
-    background: red;
+    margin: 0px;
+    padding: 0px;
 }
+
+body > .container-fluid{
+    min-height: 100vh;
+    height: 100%;
+}
+
