--- a/app/public/style/scss/style.scss
+++ b/app/public/style/scss/style.scss
@@ -8,3 +8,16 @@ body > .container-fluid{
     height: 100%;
 }
 
+// Turn-off arrows on number inputs
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+// Turn-off arrows on date inputs
+input[type=date]::-webkit-inner-spin-button,
+input[type=date]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
