--- a/app/public/style/scss/style.scss
+++ b/app/public/style/scss/style.scss
@@ -21,3 +21,40 @@ input[type=date]::-webkit-calendar-picker-indicator {
     display: none;
     -webkit-appearance: none;
 }
+
+#map {
+    width: 100%;
+    height: 100vh;
+    background-color: grey;
+}
+
+.controls {
+    margin-top: 10px;
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 32px;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  }
+
+  #origin-input,
+  #destination-input {
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 200px;
+  }
+
+  #origin-input:focus,
+  #destination-input:focus {
+    border-color: #4d90fe;
+  }
+
+
+
