--- a/app/public/style/scss/style.scss
+++ b/app/public/style/scss/style.scss
@@ -56,5 +56,27 @@ input[type=date]::-webkit-calendar-picker-indicator {
     border-color: #4d90fe;
   }
 
+//********************* Live Serach input from loads.php *********************//
 
+.list-group{
+  background: white;
+  position: absolute;
+  width: 100%;
+  max-width:870px;
+  cursor: pointer;
+  overflow-y: auto;
+  max-height: 400px;
+  box-sizing: border-box;
+  z-index: 1001;
+}
 
+.live{
+  background: white;
+  margin: 3px 0px;
+
+  &:hover{
+    background: grey;
+  }
+}
+
+//********************* end *********************//
