--- a/app/public/style/scss/style.scss
+++ b/app/public/style/scss/style.scss
@@ -80,3 +80,8 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 //********************* end *********************//
+
+#clearFilter{
+  text-decoration: none;
+  color: white;
+}
