--- a/app/public/style/scss/style.scss
+++ b/app/public/style/scss/style.scss
@@ -81,6 +81,10 @@ input[type=date]::-webkit-calendar-picker-indicator {
 
 //********************* end *********************//
 
+.relatedLoadsList{
+  list-style-type: none;
+}
+
 #clearFilter{
   text-decoration: none;
   color: white;
